# ternary-cnn

./: .gitignore  README.md
benchmarks/: benchmar_fp.py  benchmar_ternary.py  benchmark_all.py  benchmark_all_engines.sh  benchmark_all_old.py  benchmark_hybrid_ort.py  benchmark_mlas_vs_vnni.py  benchmark_onnx_int8.py  benchmark_ternary.py  benchmark_vs_onnx.py  thread_sweep.py  trace_ort_int8.py  verify_mlas_nhwc.py
docs/: engine_architecture.html  inference_pipeline.html  inference_pipeline.md  interactive_explorer.html  optimization_journal.md  optimization_journey_detailed.html  presentation.html  presentation_old.html  substack_article.md
export/: activation_scales.json  calibrate_and_export.py  calibrate_export_4bit.py  calibrate_int8_resident.py  debug_cpp.py  export_test_data.py  export_weights.py  resnet18_fp32_old.onnx  static_scales.json  static_scales_4bit.json  verify_cpp.py
inference/: CMakeLists.txt  Makefile  Makefile_old  inferencePipeLine.txt
inference/src/: bench_im2col.cpp  bench_lut_perf.cpp  bench_lut_vs_dpbusd.cpp  benchmark_hybrid.cpp  debug_dnnl.cpp  engine.h  engine_4bit.h  engine_4bit_dpbusd.h  engine_dnnl.h  engine_dnnl_f32.h  main.cpp  main_4bit.cpp  main_4bit_dpbusd.cpp  main_debug.cpp  main_dnnl.cpp  main_dnnl_f32.cpp  main_old.cpp  model_loader.h  ternary_engine.h  ternary_engine_hybrid.h  ternary_enginev9.h  test_dnnl.cpp  test_dnnl_matmul.cpp  test_dnnl_matmul2.cpp
models/: __init__.py  binary_activation.py  resnet.py  resnet_fp_old.py  resnet_ternary.py  ternary_conv.py  ternary_conv_old.py
train/: train_fp32.py  (+2 more)
